# REB-1

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  paper.bib  paper.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.virtual_documents/notebooks/: analysis.ipynb
data/sample/: demo_idle_60s.csv  demo_work_60s.csv
notebooks/: analysis.ipynb
reb1/: __init__.py  cli.py  logging_core.py
reb1/sensors/: demo.py  nvidia_smi.py  tegrastats.py
reb1/utils/: csv_writer.py  system_info.py  timebase.py
ros_reb1 (experimental)/: package.xml  setup.cfg  setup.py
ros_reb1 (experimental)/resource/: ros_reb1
ros_reb1 (experimental)/ros_reb1/: __init__.py  power_logger_node.py
tests/: test_csv_schema.py  test_demo_source.py  test_nvidia_smi.py
