[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reb1"
version = "0.1.0"
description = "REB-1: ROS Energy Benchmark (CLI + shared core for ROS node)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Alex Doe"}]
dependencies = [
    "psutil>=5.9",
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.6",
    "imageio>=2.31",
    "pydantic>=1.10,<2.0",
]

# Provide a console script (optional; keeps `python -m reb1.cli` working too)
[project.scripts]
reb1 = "reb1.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5.0",
  "black>=23.0",
  "mypy>=1.4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["reb1*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
