<?xml version="1.0"?>
<package format="3">
  <name>ros_reb1</name>
  <version>0.1.0</version>
  <description>ROS 2 package for REB-1: ROS Energy Benchmark</description>
  <maintainer email="alex@example.com">Alex Doe</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
